--- a/demo2/package.json
+++ b/demo2/package.json
@@ -16,6 +16,7 @@
     "babel-loader": "7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^3.1.0",
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
@@ -30,7 +31,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
-    "mint-ui": "^2.2.13",
+    "element-ui": "^2.11.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
     "vuex": "^3.1.1"
