--- a/React/react-three/package.json
+++ b/React/react-three/package.json
@@ -22,6 +22,7 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   }
