--- a/React/react-communication/package.json
+++ b/React/react-communication/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "events": "^3.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
