--- a/React/redux/redux-2/package.json
+++ b/React/redux/redux-2/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "redux": "^4.0.4"
