--- a/React/hook/package.json
+++ b/React/hook/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.11.0",
-    "react-dom": "^16.11.0"
+    "react-dom": "^16.11.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
