--- a/Angular/interaction/angular.json
+++ b/Angular/interaction/angular.json
@@ -66,7 +66,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "interaction:build"
+            "browserTarget": "interaction:build",
+            "port": 3333
           },
           "configurations": {
             "production": {
